@@ -22,6 +22,7 @@
 #   define OPENVRML_LOCAL_CONF_H
 
 #   include <openvrml-common.h>
+#   include <stdexcept>
 #   include <string>
 
 namespace openvrml {
@@ -30,9 +31,12 @@ namespace openvrml {
 
         namespace conf {
 
-            OPENVRML_LOCAL const std::string datadir();
-            OPENVRML_LOCAL const std::string node_path();
-            OPENVRML_LOCAL const std::string script_path();
+            OPENVRML_LOCAL const std::string datadir()
+                OPENVRML_THROW2(std::runtime_error, std::bad_alloc);
+            OPENVRML_LOCAL const std::string node_path()
+                OPENVRML_THROW2(std::runtime_error, std::bad_alloc);
+            OPENVRML_LOCAL const std::string script_path()
+                OPENVRML_THROW2(std::runtime_error, std::bad_alloc);
         }
     }
 }
